--- a/pertama.html
+++ b/pertama.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selamat Datang</title>
-    <link rel="stylesheet" href="pertama.css">
+    <title>Selamat Datang - Hampers Direl's</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <h1>Selamat Datang</h1>
-    <h2>Hampers Direl's</h2>
-    <a href="home.html" class="start-btn">Start~</a>
+    <div class="welcome-container">
+        <h1>Selamat Datang!</h1>
+        <h2>Hampers Direl's</h2>
+        <a href="home.html" class="start-btn">Start</a>
+    </div>
 </body>
 </html>
